# Students_performance

./: .gitignore  README.md  config.yaml  pyproject.toml
data/clean/: KPI_Results.csv  School_Support_Engagement_KPI.csv  access_group_means.csv  access_grouped.csv  cleaned_Student_performance.csv  cleaned_Virtual_Reality_in_Education_Impact.csv  failure_analysis_results.csv  failure_rate_by_parental_education.csv  field_grouped.csv  final_df.csv  gender_grouped.csv  gender_region_grouped.csv  gpa_by_parental_support.csv  gradeclass_education.csv  gradeclass_support.csv  hypothesis_3_analysis_results.csv  learning_outcomes_engagement_mean.csv  region_grouped.csv  success_analysis_results.csv  support_group_means.csv  support_grouped.csv  usage_group_means.csv
figures/: Dashboard_Tableau.twb  drawSQL-mysql-export-2024-10-09.sql  ~Dashboard_Tableau__3528.twbr  ~Dashboard_Tableau__7432.twbr
notebooks/: Student_performance.ipynb  Untitled.ipynb  Untitled1.ipynb  app.py  import_data.py  success_rate_by_parental_support.csv
notebooks/.ipynb_checkpoints/: SQLtables-checkpoint.ipynb  Student_performance-checkpoint.ipynb  Untitled1-checkpoint.ipynb  VR_analysis-checkpoint.ipynb  app-checkpoint.py
src/student_performance/: __init__.py
